# infinity-core

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: basic-tests.yml  main.yml  python-package.yml
docs/: conf.py  index.md  index.rst
docs/source/: basic_usage.rst  getting_started.md  module_summaries.rst  modules.md  modules.rst  readme.md  readme.rst  source_documentation.md  source_documentation.rst
infinity_api/: api.py  batch.py  data_structures.py  session.py  utils.py
infinity_core/: api.py  api_test.py  batch.py  batch_test.py  data_structures.py  session.py  session_test.py  utils.py
tests/: test_api.py  test_batch.py  test_integration.py
