[tool.poetry]
authors = ["Daniel Hensley <daniel@toinfinity.ai>"]
description = "Infinity AI API wrapper"
name = "infinity-api"
packages = [{include = "infinity_api"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pyserde = "^0.9.2"
python = "^3.7"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.981"
pytest = "^7.1.3"

[tool.black]
line-length = 120

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
