[tool.poetry]
authors = ["Daniel Hensley <daniel@toinfinity.ai>"]
description = "Infinity AI API wrapper"
name = "infinity-api"
packages = [{include = "infinity_api"}]
readme = "README.rst"
version = "0.1.0"

[tool.poetry.dependencies]
pyserde = "^0.9.2"
python = "^3.7"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
# Sphinx = {version = "^5.2.3"}
Sphinx = {version = "^5.2.3", optional = true}
black = "^22.8.0"
mypy = "^0.981"
pytest = "^7.1.3"
# sphinx-rtd-theme = {version = "^1.0.0"}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.group.types.dependencies]
types-requests = "^2.28.11"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests",
  "apiget: marks tests that make API GET requests",
  "apipost: marks tests that make API POST requests",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
