[tool.poetry]
authors = ["Daniel Hensley <daniel@toinfinity.ai>"]
description = "Infinity AI core API wrapper"
name = "infinity-core"
packages = [{include = "infinity_core"}]
readme = "README.rst"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
Sphinx = {version = "^5.2.3", optional = true}
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.981"
pytest = "^7.1.3"
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.group.types.dependencies]
types-requests = "^2.28.11"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests",
  "needsapi: marks tests that need cloud API access",
  "apiget: marks tests that make API GET requests",
  "apipost: marks tests that make API POST requests",
  "batchpost: marks tests that make batched API POST requests",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
